updated register/home -api

--- a/static/css/admin/admin.css
+++ b/static/css/admin/admin.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #17a2b8;
+  background-color: #dcd9d9;
   height: 100vh;
 }
 #login .container #login-row #login-column #login-box {
@@ -9,11 +9,19 @@ body {
   max-width: 600px;
   height: 320px;
   border: 1px solid #9C9C9C;
-  background-color: #EAEAEA;
+  background-color: #17a2b8;
 }
 #login .container #login-row #login-column #login-box #login-form {
   padding: 20px;
 }
 #login .container #login-row #login-column #login-box #login-form #register-link {
   margin-top: -85px;
+}
+.text-info {
+    color: white!important;
+}
+.btn-info {
+    color: #17a2b8;
+    border-color: #17a2b8;
+    background-color: white
 }
