--- a/templates/basic_table.html
+++ b/templates/basic_table.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title %}Records{% endblock %}
 {% block body %}
 <aside>
   <div id="sidebar" class="nav-collapse ">
