--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-
+{% block title%}Dashboard{% endblock %}
 {% block body %}
 <aside>
   <div id="sidebar" class="nav-collapse ">
