--- a/templates/form_component.html
+++ b/templates/form_component.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-
+{% block title %}Forms{% endblock %}
 {% block body %}
 <aside>
   <div id="sidebar" class="nav-collapse ">
