--- a/templates/api/layout.html
+++ b/templates/api/layout.html
@@ -20,9 +20,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="/api">Documentation<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item ">
+          <!-- <li class="nav-item ">
             <a class="nav-link" href="/api/admin">Admin Sign In</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="/api/signup">Sign Up For API KEY</a>
           </li>
