--- a/templates/api/admin.html
+++ b/templates/api/admin.html
@@ -10,7 +10,7 @@
           <div id="login-row" class="row justify-content-center align-items-center">
               <div id="login-column" class="col-md-6">
                   <div id="login-box" class="col-md-12">
-                      <form id="login-form" class="form" action="adminLogin" method="POST">
+                      <form id="login-form" class="form" action="{{ url_for('AdminLogin') }}" method="POST">
                          {% if err %}
                          <span style="color:red">{{err}}</span>
                          {% endif %}
