--- a/templates/api/signup.html
+++ b/templates/api/signup.html
@@ -1,6 +1,7 @@
 {% extends 'api/layout.html' %}
 {% block head %}
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Sign Up</title>
   <style media="screen">
@@ -13,6 +14,7 @@
     }
     form{
       margin: 0 auto!important;
+      text-align: center;
     }
     .button_container{
       text-align: center;
